--- a/.vsts-ci/templates/publish-markets.yml
+++ b/.vsts-ci/templates/publish-markets.yml
@@ -5,6 +5,15 @@ steps:
   artifact: vscode-powershell
   displayName: Download signed artifacts
 
+- task: PowerShell@2
+  displayName: Add private NPM registry
+  inputs:
+    targetType: inline
+    pwsh: true
+    script: |
+      Add-Content .npmrc "always-auth=true"
+      Add-Content .npmrc "registry=https://pkgs.dev.azure.com/powershell-rel/PowerShellEditorServices/_packaging/PSESFeed/npm/registry/"
+
 - task: npmAuthenticate@0
   inputs:
     workingFile: .npmrc
