--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -61,6 +61,8 @@ jobs:
       - name: Build, test and package
         shell: pwsh
         run: Invoke-Build
+        env:
+          NODE_AUTH_TOKEN: ${{ secrets.AZURE_NPM_TOKEN }}
 
       - name: Upload build artifacts
         uses: actions/upload-artifact@v4
