Disable Azure Pipelines CI for release branch
It is completely superfluous because the release pipeline runs the exact same CI
template. Moreover, because it's a different Azure organization, the NPM
authentication won't work without setting up and managing a service connection.

Run the GitHub Actions CI with the Release configuration.

Also run the NPM install scripts because sometimes it will break without them.

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -64,7 +64,7 @@ jobs:
 
       - name: Build, test and package
         shell: pwsh
-        run: Invoke-Build
+        run: Invoke-Build -Configuration Release
         env:
           NPM_PASSWORD: ${{ secrets.AZURE_NPM_PASSWORD_BASE64}}
 
