Add a NuGet.config file to the BinaryModule mock
So that Cloud Feed Services is happy.

--- a/.github/workflows/ci-test.yml
+++ b/.github/workflows/ci-test.yml
@@ -80,7 +80,7 @@ jobs:
         if: always()
         with:
           name: vscode-powershell-vsix-${{ matrix.os }}
-          path: vscode-powershell/powershell-*.vsix
+          path: '**/*.vsix'
 
       - name: Upload test results
         uses: actions/upload-artifact@v4
